--- a/cmd/frontend/templates/stats_list.gohtml
+++ b/cmd/frontend/templates/stats_list.gohtml
@@ -37,10 +37,10 @@
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">{{ .Type.Title }}</th>
-                            <th scope="col">Games</th>
-                            <th scope="col">Avg Price</th>
-                            <th scope="col">Avg Score</th>
-                            <th scope="col">Avg Players</th>
+                            <th style="width: 15%;" scope="col">Games</th>
+                            <th style="width: 15%;" scope="col">Avg Price</th>
+                            <th style="width: 15%;" scope="col">Avg Score</th>
+                            <th style="width: 15%;" scope="col">Avg Players</th>
                         </tr>
                         </thead>
                         <tbody>
