--- a/cmd/frontend/templates/stat.gohtml
+++ b/cmd/frontend/templates/stat.gohtml
@@ -9,7 +9,7 @@
                 <i class="fas fa-users"></i> {{ .Stat.Name }} {{ .Stat.Type.Title }}
             </h1>
 
-            <a class="btn btn-success" href="/games?{{ .Stat.Type.MongoCol }}={{ .Stat.ID }}">View Games With {{ .Stat.Type.Title }}</a>
+            <a class="btn btn-success" href="/games?{{ .Stat.Type.MongoCol }}={{ .Stat.ID }}">View {{ comma .Stat.Apps }} Games With {{ .Stat.Type.Title }}</a>
 
         </div>
 
