--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -448,7 +448,7 @@
                             </div>
 
                             <div class="card mb-4">
-                                <h5 class="card-header">Player Count</h5>
+                                <h5 class="card-header">Player Count - All Time</h5>
                                 <div class="card-body">
                                     <div class="player-chart" id="players-chart2">
                                         <i class="fas fa-spinner fa-spin"></i>
@@ -457,12 +457,13 @@
                             </div>
 
                             <div class="card mb-4">
-                                <h5 class="card-header">Player Heatmap - 28 Day Average</h5>
+                                <h5 class="card-header">Player Count - By Time of Day/Week</h5>
                                 <div class="card-body">
                                     <div class="player-chart" id="players-heatmap-chart">
                                         <i class="fas fa-spinner fa-spin"></i>
                                     </div>
                                 </div>
+                                <small class="card-footer">Averages taken over the last 4 weeks.</small>
                             </div>
 
                         {{ end }}
