Fix players table layout

--- a/cmd/frontend/templates/players.gohtml
+++ b/cmd/frontend/templates/players.gohtml
@@ -82,9 +82,10 @@
                             <th scope="col">Comments</th>
                             <th scope="col">Achievements</th>
                             <th scope="col">Completed</th>
-                            <th scope="col"></th> {{/* Link */}}
-                            <th scope="col">Search Score</th>
                             <th scope="col">Foils</th>
+                            {{/* Below two must be last */}}
+                            <th scope="col"><i class="fas fa-link"></i></th>
+                            <th scope="col">Search Score</th>
                         </tr>
                         </thead>
                         <tbody>
