Hide delete tab

--- a/cmd/frontend/templates/settings.gohtml
+++ b/cmd/frontend/templates/settings.gohtml
@@ -24,10 +24,10 @@
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="tab" href="#donations" role="tab">Donations</a>
                     </li>
-                    <li class="mr-auto"></li>
-                    <li class="nav-item">
-                        <a class="nav-link text-danger" data-toggle="tab" href="#delete" role="tab">Delete Account</a>
-                    </li>
+                    {{/*<li class="mr-auto"></li>*/}}
+                    {{/*<li class="nav-item">*/}}
+                    {{/*    <a class="nav-link text-danger" data-toggle="tab" href="#delete" role="tab">Delete Account</a>*/}}
+                    {{/*</li>*/}}
                 </ul>
 
             </div>
