--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -288,7 +288,7 @@
                             </div>
                         </div>
 
-                        <table class="table table-hover table-striped table-datatable table-xs mb-0" id="players" data-row-type="players" data-ordering="false">
+                        <table class="table table-hover table-striped table-datatable table-xs mb-0" data-row-type="players" data-ordering="false">
                             <thead>
                             <th>Name</th>
                             <th>Count</th>
