Add links to header

--- a/cmd/frontend/templates/includes/header.gohtml
+++ b/cmd/frontend/templates/includes/header.gohtml
@@ -250,6 +250,14 @@
                         </li>
                     {{ end }}
 
+                    <li class="nav-item">
+                        <a class="nav-link" href="/discord-server" target="_blank" rel="noopener" style="color: #7289DA"><i class="fab fa-discord"></i></a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://twitter.com/gamedb_online" target="_blank" rel="noopener" style="color: #1DA1F2"><i class="fab fa-twitter"></i></a>
+                    </li>
+
                 </ul>
                 <ul class="navbar-nav">
 
