Redo player ranks area

--- a/cmd/frontend/assets/sass/_player.scss
+++ b/cmd/frontend/assets/sass/_player.scss
@@ -27,5 +27,9 @@
         #history-chart, #ranks-chart {
             height: 250px;
         }
+
+        .rank-chart {
+            height: 200px;
+        }
     }
 }
