Add anchors to stats dashboards

--- a/cmd/frontend/templates/stats_gamedb.gohtml
+++ b/cmd/frontend/templates/stats_gamedb.gohtml
@@ -35,25 +35,25 @@
                     </div>
                 </div>
 
-                <div class="card mb-3">
+                <div class="card mb-3" id="player-levels">
                     <h5 class="card-header">
                         <span>Player Levels <small>(For levels below 2,000)</small></span>
                         <small class="float-right">See <a href="/experience">Experience</a> for more!</small>
                     </h5>
                     <div class="card-body">
-                        <div class="chart" id="player-levels">
+                        <div class="chart" id="player-levels-chart">
                             <i class="fas fa-spinner fa-spin"></i>
                         </div>
                     </div>
                 </div>
 
-                <div class="card">
+                <div class="card" id="player-countries">
                     <h5 class="card-header">
                         <span>Player Countries <small>(Top 40)</small></span>
                         <small class="float-right">Click a bar to see states</small>
                     </h5>
                     <div class="card-body">
-                        <div class="chart" id="player-countries">
+                        <div class="chart" id="player-countries-chart">
                             <i class="fas fa-spinner fa-spin"></i>
                         </div>
                     </div>
