--- a/cmd/frontend/templates/stats_steam.gohtml
+++ b/cmd/frontend/templates/stats_steam.gohtml
@@ -40,7 +40,7 @@
                     </div>
                 </div>
 
-                <div class="card mb-4">
+                <div class="card mb-4" id="online">
                     <h5 class="card-header">Players Online <small>(5 years)</small></h5>
                     <div class="card-body">
                         <div class="chart" id="client-players2">
@@ -49,27 +49,27 @@
                     </div>
                 </div>
 
-                <div class="card mb-4">
+                <div class="card mb-4" id="scores">
                     <h5 class="card-header">App Scores</h5>
                     <div class="card-body">
-                        <div class="chart" id="scores">
+                        <div class="chart" id="scores-chart">
                             <i class="fas fa-spinner fa-spin"></i>
                         </div>
                     </div>
                 </div>
 
-                <div class="card mb-4">
+                <div class="card mb-4" id="release-dates">
                     <h5 class="card-header">App Release Dates</h5>
                     <div class="card-body">
-                        <div class="chart" id="release-dates">
+                        <div class="chart" id="release-dates-chart">
                             <i class="fas fa-spinner fa-spin"></i>
                         </div>
                     </div>
                 </div>
 
-                <h5>App Types</h5>
+                <h5 id="app-types">App Types</h5>
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped" data-order='[[1, "desc"]]' id="app-types">
+                    <table class="table table-hover table-striped" data-order='[[1, "desc"]]' id="app-types-table">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">Type</th>
