Player update days chart

--- a/cmd/frontend/templates/stats_gamedb.gohtml
+++ b/cmd/frontend/templates/stats_gamedb.gohtml
@@ -47,7 +47,7 @@
                     </div>
                 </div>
 
-                <div class="card" id="player-countries">
+                <div class="card mb-3" id="player-countries">
                     <h5 class="card-header">
                         <span>Player Countries <small>(Top 40)</small></span>
                         <small class="float-right">Click a bar to see states</small>
@@ -57,6 +57,16 @@
                             <i class="fas fa-spinner fa-spin"></i>
                         </div>
                     </div>
+                </div>
+
+                <div class="card" id="player-update-days">
+                    <h5 class="card-header">Player Update Days</h5>
+                    <div class="card-body">
+                        <div class="chart" id="player-update-days-chart">
+                            <i class="fas fa-spinner fa-spin"></i>
+                        </div>
+                    </div>
+                    <small class="card-footer">Public profiles only</small>
                 </div>
 
             </div>
