--- a/cmd/frontend/templates/includes/header.gohtml
+++ b/cmd/frontend/templates/includes/header.gohtml
@@ -242,20 +242,21 @@
                     {{ end }}
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/discord-server" target="_blank" rel="noopener" style="color: #7289DA"><i class="fab fa-discord"></i></a>
+                        <a class="nav-link" href="/discord-server" target="_blank" rel="noopener"><i class="fab fa-discord" style="color: #7289DA"></i> <span class="d-lg-none">Discord</span></a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="https://twitter.com/gamedb_online" target="_blank" rel="noopener" style="color: #1DA1F2"><i class="fab fa-twitter"></i></a>
+                        <a class="nav-link" href="https://twitter.com/gamedb_online" target="_blank" rel="noopener"><i class="fab fa-twitter" style="color: #1DA1F2"></i> <span class="d-lg-none">Twitter</span></a>
                     </li>
 
                 </ul>
                 <ul class="navbar-nav">
 
                     <li class="nav-item">
-                        <span class="nav-link cursor-pointer" id="dark-mode" data-toggle="tooltip" data-placement="bottom" title="Toggle Dark Mode">
+                        <span class="nav-link cursor-pointer" id="dark-mode" data-toggle="tooltip" data-placement="bottom" title="Dark Mode">
                             <i class="fas fa-moon {{ if not (.GetCookieFlag "dark") }}d-none{{end}}"></i>
                             <i class="fas fa-sun {{ if .GetCookieFlag "dark" }}d-none{{end}} text-warning"></i>
+                            <span class="d-lg-none">Dark Mode</span>
                         </span>
                     </li>
 
