Fix player chart padding

--- a/cmd/frontend/templates/player.gohtml
+++ b/cmd/frontend/templates/player.gohtml
@@ -247,7 +247,7 @@
                                             {{ end }}
 
                                         </div>
-                                        <div class="card-body rank-chart" id="{{ .Metric.Letter }}-chart">
+                                        <div class="card-body rank-chart p-1" id="{{ .Metric.Letter }}-chart">
                                             <i class="fas fa-spinner fa-spin"></i>
                                         </div>
                                     </div>
